# massalia.events

./: .gitignore  CLAUDE.md  Makefile  README.md  package-lock.json  package.json  playwright.config.ts
crawler/: .crawl_sources_status.json  .gitignore  README.md  config.yaml  crawl.py  pyproject.toml  requirements.txt
crawler/config/: selection-criteria.yaml  sources.example.yaml  sources.schema.json  sources.yaml
crawler/data/: unmatched-events.yaml  venues-shotgun.json  venues.yaml
crawler/scripts/: generate-venue-pages.py
crawler/src/: __init__.py  classifier.py  config.py  crawler.py  deduplicator.py  logger.py  selection.py  venue_manager.py
crawler/src/generators/: __init__.py  markdown.py
crawler/src/models/: __init__.py  event.py  venue.py
crawler/src/parsers/: __init__.py  agendaculturel.py  base.py  cepacsilo.py  citemusique.py  ecrituresdureel.py  espacejulien.py  journalzebuline.py  klemenis.py  lacriee.py  lezef.py  (+6 more)
crawler/tests/: __init__.py  test_agendaculturel_parser.py  test_cepacsilo_parser.py  test_citemusique_parser.py  test_classifier.py  test_cli.py  test_config.py  test_configurable_parser.py  test_deduplicator.py  test_ecrituresdureel_parser.py  test_espacejulien_parser.py  test_event.py  test_http.py  test_images.py  test_journalzebuline_parser.py  test_lacriee_parser.py  test_lemakeda_parser.py  test_lezef_parser.py  test_loeuvre_parser.py  test_logger.py  test_markdown.py  test_parser.py  test_sanitize.py  test_selection.py  test_shotgun_parser.py  test_theatrejoliette_parser.py  test_venue_manager.py  test_videodrome2_parser.py
(+4467 files in other folders)
